# todo-api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: README.md  api-architect.md  release-maintainer.md  test-qa.md
.claude/skills/: README.md
.claude/skills/fastapi-crud/: SKILL.md
.claude/skills/github-publication/: SKILL.md
.claude/skills/issue-pr-workflow/: SKILL.md
.claude/skills/python-test-guardrails/: SKILL.md
.github/: BRANCH_NAME_POLICY.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch-name-check.yml  lint.yml  python-test.yml  release.yml
docs/: API_DESIGN.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
src/todo_api/: __init__.py  app.py  db.py  schemas.py
tests/: test_api.py
