[project]
name = "todo-api"
version = "0.1.0"
description = "Minimal TODO management API built with FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.12.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "httpx==0.27.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
