[project]
name = "todo-api"
version = "0.1.0"
description = "Minimal TODO management API built with FastAPI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.13.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "httpx==0.28.1",
  "ruff==0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "UP042",  # str+Enum vs StrEnum is a style choice, not a bug; keep as-is for now
]

[tool.ruff.lint.per-file-ignores]
"src/todo_api/app.py" = [
  "B008",  # FastAPI's Query()/Depends() are meant to be called in argument defaults
]
